# Team2_Machine_Learning

./: LICENSE  Makefile  README.md  pyproject.toml
models/: README.md
team2_machine_learning/: __init__.py  dataset.py  features.py  plots.py
team2_machine_learning/modeling/: predict.py  train.py
